// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render selector 1`] = `
<div>
  <div
    class="signInPage"
  >
    <div
      class="backgroundImage makeStyles-backgroundImage-1 makeStyles-backgroundImage-2"
    />
    <div
      class="contents"
    >
      <p
        class="MuiTypography-root mission MuiTypography-body1"
      >
        Detect cancer early, when it can be cured.
      </p>
      <div
        class="sign-in"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge"
          data-testid="sign-in-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Sign In
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render selector with child 1`] = `
<div>
  <div
    class="signInPage"
  >
    <div
      class="backgroundImage makeStyles-backgroundImage-75 makeStyles-backgroundImage-76"
    />
    <div
      class="contents"
    >
      <p
        class="MuiTypography-root mission MuiTypography-body1"
      >
        Detect cancer early, when it can be cured.
      </p>
      <div
        class="sign-in"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge"
          data-testid="sign-in-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Sign In
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        data-testid="test-child-element"
      />
    </div>
  </div>
</div>
`;
